Checkpoint: fold review findings and source-verified GC fixes into VMStructs design
Adds the adversarial-review findings (safepoint/callback constraints,
Shenandoah/ZGC barrier-safety gap, stack-root resumability gap) plus their
fixes: gate the manual-walk path on G1 only, and route stack-root
discoveries through the existing tag-indexed frontier table instead of
persisting root descriptors. Adds a source-verified addendum on
Shenandoah (mark-word forwarding, tractable as a v1.5 follow-up) vs ZGC
(colored-pointer decode is runtime-computed and phase-dependent, not just
version-fragile, so it stays excluded).

Environment: Datadog workspace

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>